--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "googleapis": "^140.0.1",
     "nodemon": "^3.1.4",
     "tsx": "^4.15.8"
   }
