--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon --watch src --exec tsx src/server.ts",
     "start": "tsx src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.5.2"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
